# aanOS

./: .clang-format  .clangd  .config.old  .crosstool-config  .crosstool-config.old  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-toolchain.sh  default-host.sh  fontgen.py  gen-clangd.sh  grub.cfg  run.sh
src/apps/editor/: editor.cpp  editor.hpp
src/arch/: arch.cmake
src/arch/x86/: i386.cmake  x86.cmake
src/arch/x86/boot/: boot.cpp  entry_point.cpp  multiboot2.cpp  multiboot2.hpp
src/arch/x86/common/graphics/: framebuffer.cpp  framebuffer.hpp
src/arch/x86/common/input/: keyboard.cpp  keyboard.hpp
src/arch/x86/common/io/: serial.cpp  serial.hpp
src/arch/x86/console/: text_mode_console.cpp  text_mode_console.hpp
src/arch/x86/graphics/: framebuffer.cpp  framebuffer.hpp
src/arch/x86/i386/boot/: entry_point.cpp
src/arch/x86/i386/cpu/: cpu.cpp  cpu.hpp
src/arch/x86/i386/memory/: paging.cpp  paging.hpp
src/arch/x86/i386/system/: system.cpp
src/arch/x86/input/: keyboard.cpp  keyboard.hpp
src/arch/x86/io/: ports.hpp  serial.cpp  serial.hpp
src/arch/x86/system/: system.cpp
src/gfx/: canvas.cpp  canvas.hpp  shapes.cpp  shapes.hpp
src/gfx/text/: text.cpp  text.hpp
src/hal/: boot.hpp  framebuffer.hpp  keyboard.hpp  serial.hpp
src/kernel/: kernel.cpp  main.cpp  panic.hpp
src/kernel/boot/: boot_context.hpp  multiboot2.hpp
src/kernel/containers/: gap_buffer.hpp
src/kernel/hal/: boot.hpp  framebuffer.hpp  keyboard.hpp  page_frame_allocator.hpp  paging.hpp  serial.hpp  system.hpp
src/kernel/logging/: log.hpp  logging.cpp  serial_logging.cpp
src/kernel/logging/backend/: buffered.hpp  callback.hpp  serial.hpp
src/kernel/memory/: data_view.hpp  heap.cpp  heap.hpp
src/kernel/memory/builtin/: bm_heap.cpp  bm_heap.hpp  bm_page_frame_allocator.cpp  bm_page_frame_allocator.hpp  bump_heap.cpp  bump_heap.hpp
src/kernel/modules/gfx/: _mod.cmake  canvas.cpp  canvas.hpp  color.hpp  shapes.cpp  shapes.hpp
src/kernel/modules/gfx/text/: 8x16_hubenchang.cpp  8x16_thinking.cpp  8x8_font.cpp  bitmap_font.hpp  textrenderer.cpp  textrenderer.hpp
src/kernel/modules/klibc/: _mod.cmake
src/kernel/modules/klibc/include/: stdio.h
src/kernel/modules/klibc/include/kernel/: log.hpp
src/kernel/modules/klibc/src/: vsnprintf.cpp
src/kernel/modules/ui/core/: text_area.cpp  text_area.hpp  text_line_frame.hpp  window.cpp
src/kernel/modules/ui/tty/: tty_text_area.hpp
src/kernel/runtime/: cstring.cpp
src/kernel/shell/: shell.cpp  shell.hpp
src/kernel/tty/: display.hpp  tty.cpp  tty.hpp
src/libc/include/: features.h
src/libc/include/bits/: wordsize.h
src/libc/misc/sys/: cdefs.h
src/libc/src/: stdlib.cpp  string.cpp
src/libs/containers/: data_storage.hpp  flatmap.hpp  gap_buffer.hpp  textlinebuffer.hpp
src/libs/gfx/: canvas.hpp
src/libs/math/: bit_logic.hpp
src/libs/ui/core/: text_area.hpp
src/libs/ui/tty/: tty_text_area.hpp
src/logging/: serial_logging.cpp
src/ui/core/: iconsole.hpp  text_area.cpp  text_area.hpp  widget.hpp  window.cpp  window.hpp
sysroot/usr/include/: stdio.h  stdlib.h  string.h
